Header WCS region added to ImageCrop, fixed bug in NoiseChisel
Additions
=========

- ImageCrop: Added the two options `--hstartwcs' and `--hendwcs' to
  read specific portions of the input file's header. As explained in
  the manual this is necessary now that WCSLIB includes distortion in
  the coordinates but old FITS files were written with the assumption
  that WCSLIB does not support them.

Bug fixes
=========

- NoiseChisel: The flux weighted center of the detections (which are
  used to find the sky standard deviation on the mesh grid) used the
  flux of all the pixels. But a weight can only have a positive value!
  So the negative values would make the result go wrong. Now, the xys
  array has a third column to keep the sum of positive flux pixels
  which were used as weights in finding the flux weighted center.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2015-07-17  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* lib/fitsarrayvv.c (pixelareaarcsec2): Previously called
+	pixelsteradians. Changed the units to arcsec^2 because it is more
+	useful.
+
+	* src/noisechisel/detection.c (detlabelsn): Now using a new sum of
+	pixel values for flux weighted center of profile. The values are
+	stored as one column in the
+
 2015-07-07  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* src/mkcatalog/mkcatalog.c (firstpass): Use only positive (after
