Grown clump S/N and clump quantile bugs fixed
There were two bugs that are now fixed:

  - MakeCatalog: In a grown clump label image, the detections that
    have one or no clumps are fully filled. So there is no river
    pixels for them. I had not corrected the clump S/N calculations in
    MakeCatalog also consider this. Now this issue is corrected.

  - MakeCatalog: Although brightness was correctly calculated, in the
    final printing, it would be divided by the area! It is now fixed.

  - NoiseChisel: When finding the S/N quantile for clumps, it was
    mistakenly using the detection S/N quantile for both clumps and
    detections! Now it uses the correct value. Until now, these two
    were always the same, so I hadn't noticed this!

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2015-07-22  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* src/noisechisel/thresh.c (snthresh): Had mistakenly used
+	`p->detquant', for both detection and segmentation! This is now
+	corrected.
+
+	* src/mkcatalog/mkcatalog.c (secondpass): Sets the river flux to
+	Sky for when the grown clumps are used, see the explanation
+	bellow.
+
+	* src/mkcatalog/columns.c (brightnessmag): Corrected the
+	definition of brightness. It was incorrectly dividing the total
+	brightness by the area when the user asked for brightness.
+	(sncol): Can now work accurately when grown clumps are also
+	included. In a grown clump image, full detections that aren't
+	harmed by deblending are are fully labeled. So there is no river
+	pixels there and the S/N equations had to incorporate this.
+
 2015-07-18  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* src/noisechisel/segmentation.c (nextavailablelabel): Now
